fixed tooltip spacing in group email policy

--- a/app/themes/default/less/form.less
+++ b/app/themes/default/less/form.less
@@ -104,7 +104,7 @@ div.form .errorSummary ul {
 
 div.wide.form label {
 	float: left;
-	margin-right: 10px;
+	//margin-right: 10px;
 	position: relative;
 }
 
