--- a/app/themes/default/less/newui.less
+++ b/app/themes/default/less/newui.less
@@ -4022,6 +4022,10 @@ div.hasHalfs{
     }
 }
 
+.ui-state-warning{
+    color: #ff0000 !important;
+}
+
 /*=Lead Conversion*/
 #LeadConvertView{
     .DetailsView > div{
